Fix white spaces when using chrome translator

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -190,7 +190,7 @@ body {
 
   .tabs {
     display: flex;
-    align-items: center;    
+    align-items: stretch; 
   }
 
   .tabs-tab {
